--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
         </div>
 
         <a href="#" class="card showreel">
-            <video autoplay loop muted playsinline class="video-bg">
-                <source src="https://sns-video-hs.xhscdn.com/stream/79/110/259/01e8d789ea1729ca01037003998a12bb70_259.mp4" type="video/mp4">
-            </video>          
-            <div class="play-btn"><svg width="24" height="24" fill="white" viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg></div>
+<video autoplay loop muted playsinline class="video-bg">
+    <source src="https://sns-video-hs.xhscdn.com/stream/79/110/259/01e8d789ea1729ca01037003998a12bb70_259.mp4" type="video/mp4">
+</video>            
+          <div class="play-btn"><svg width="24" height="24" fill="white" viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg></div>
             <div style="position:absolute; bottom:20px; left:20px; z-index:2;">
                 <h3 style="font-size:1.2rem;">2025 Reel</h3>
             </div>
@@ -206,7 +206,7 @@
             <div class="label">Xiaohongshu</div>
         </a>
 
-        <a href="mailto:yumanmok42@gmail.com" class="card contact">
+        <a href="yumanmok42@gmail.com" class="card contact">
             <span style="font-weight:700; font-size:1.2rem;">TALK WITH ME</span>
         </a>
 
@@ -226,7 +226,15 @@
             <div class="gallery-item"><img src="https://scontent.cdninstagram.com/v/t51.29350-15/435291514_1339378000068964_4602357835096393093_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=106&ig_cache_key=MzMzODMxNjU5NjE3NDkxMjYwMQ%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTgwMC5zZHIuZGVmYXVsdF9pbWFnZS5DMyJ9&_nc_ohc=eW3j5fptCNAQ7kNvwElSxGo&_nc_oc=Adnk6qQKEb3DgizT5JaZc7e74BtYn8f4_L25H_q8DQgOgHCo1z3rsa6M9HuxConDe5E&_nc_zt=23&_nc_ht=scontent.cdninstagram.com&_nc_gid=lQJIgE1AIIizGNmf27w3SQ&oh=00_AfgbX64u7R26jA2YXSZeKF17jRIW5NRAa19s2bkFjpN1rA&oe=693126CC"></div>
             <div class="gallery-item"><img src="https://scontent.cdninstagram.com/v/t51.75761-15/474986377_18479704585054126_4908245254158342239_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=111&ig_cache_key=MzU1OTkzMjc4NTY3MjgxNjcyMg%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTA4Mi5zZHIuQzMifQ%3D%3D&_nc_ohc=bkGGE6iSrKgQ7kNvwEtRmdx&_nc_oc=Adn5zBcz1w7dLVoTJjgIyCZNnwdYHCiJIVsQLuUG9jQPT756FVNU4NYM8stQrp4t_nc&_nc_zt=23&_nc_ht=scontent.cdninstagram.com&_nc_gid=pBkKhbH9UXsx0W0bCIW0uQ&oh=00_AfiOzjVjGPA5TujNmgn6jAuJEQsThhYj4yq98xNwflUDcg&oe=69314075"></div>
             <div class="gallery-item"><img src="https://scontent.cdninstagram.com/v/t51.75761-15/487469288_18490088137054126_7603686794289392639_n.jpg?stp=dst-jpg_e15_tt6&_nc_cat=110&ig_cache_key=MzU5ODgwODE0MjU3MjEyNDQ1Nw%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjcyMHg5MDAuc2RyLkMzIn0%3D&_nc_ohc=fuu5zGtDZs0Q7kNvwFrI_o4&_nc_oc=AdnHnjfaLbKAGryOHrJssfYFy-C4K5xUUw-wJZP3lPMuPGw5WbjJzOTrzX5SWwsKpas&_nc_zt=23&_nc_ht=scontent.cdninstagram.com&_nc_gid=maZganjQbgXM0Hv8lFF-XA&oh=00_AfiMkh10aBHCI5I0n9mA3mltAhkWjyhMcLmnuT1gOovg3Q&oe=69313806"></div>
-            </div>
+            <div class="gallery-item"><img src="https://scontent.cdninstagram.com/v/t51.82787-15/586678011_18537401626054126_1806756505533089462_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=109&ig_cache_key=Mzc3NDkyNDE2MzgxOTU5ODEwNg%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTkxOC5zZHIuQzMifQ%3D%3D&_nc_ohc=9KsANxJTfwMQ7kNvwFnSaLd&_nc_oc=AdmM4jGGgv5IBtE_7gtUhJIuOWeNJrgM9EtypINzoPFQIlxc2Z4kubGzqOAMM4Ditnk&_nc_zt=23&_nc_ht=scontent.cdninstagram.com&_nc_gid=uPyF_A8qBX4vlCGzcTPt_g&oh=00_AfjDDHmUip_Cz6QEVYfvitAi9G8e5mO4Cs0KUxXtHHFMyg&oe=6931477A"></div>
+            <div class="gallery-item"><img src="https://scontent.cdninstagram.com/v/t51.29350-15/468809878_1124327509073560_8557229509737193427_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=105&ig_cache_key=MzUxMjM3NjY1Mzc3NzU0Mjk5OQ%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTgwMC5zZHIuZGVmYXVsdF9pbWFnZS5DMyJ9&_nc_ohc=LCvhDyNkNNgQ7kNvwEBFRXo&_nc_oc=AdnusNQuqhofGGPFqEVUcmFWvfZSG5H0PYekNhUA7q56Ph6FyigphdGXaA9oW8BsJ0g&_nc_zt=23&_nc_ht=scontent.cdninstagram.com&_nc_gid=4FOMDeFuRxxtijqcvqpLxw&oh=00_AfhlHJW_rr5M5G7T7pOaNe2zi7poGMw3-0trJ2tm7aolEQ&oe=693135A1"></div>
+            <div class="gallery-item"><img src="https://scontent.cdninstagram.com/v/t51.29350-15/456720200_858546882524369_9026759935935559384_n.jpg?stp=dst-jpegr_e35_tt6&_nc_cat=108&ig_cache_key=MzQ0MTYyOTQxMzc4NjYyNTk5OA%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTA4MC5oZHIuZGVmYXVsdF9pbWFnZS5DMyJ9&_nc_ohc=wdlCfRKwrpgQ7kNvwE-jQku&_nc_oc=AdmlU5Te_-W6f0oV3flYnO4Q-5UykG9wpWs_xUqt2sw4nnU8R7iyu0JeTbVEDArrBzg&_nc_zt=23&se=-1&_nc_ht=scontent.cdninstagram.com&_nc_gid=naYRZmEW_JCCcuaOX6xRXw&oh=00_AfgIY6kbo3BDQ98zF1_wWScwK0iPBJl3AfekBOnSF6Xngw&oe=6931509E"></div>
+            <div class="gallery-item"><img src="https://scontent.cdninstagram.com/v/t51.29350-15/416560155_1566547424081636_2590372858106644115_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=103&ig_cache_key=MzI3MTkyNTY2NjI0OTYwNTM1Nw%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTc5Ni5zZHIuZGVmYXVsdF9pbWFnZS5DMyJ9&_nc_ohc=310resrR6REQ7kNvwFV5Y_Z&_nc_oc=AdnydkFv_P8F__rNw6GCbJzPi5C6MmKFO7JRwd4Lf-6vMvbitiHFVkxgKkbKb2JKWW4&_nc_zt=23&_nc_ht=scontent.cdninstagram.com&_nc_gid=NVpazklNAzqiTdXmxo_mpw&oh=00_Afj7Q50-yUmPOwqT_xVJTIP6Ea81YGOBKm5oPgD-v1KpOQ&oe=69312829"></div>
+            <div class="gallery-item"><img src="https://scontent.cdninstagram.com/v/t51.29350-15/426069052_393098243298091_6186439351646472103_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=104&ig_cache_key=MzI5OTYzMDg2NjQ4NTU3MjgwNA%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTgwMC5zZHIuZGVmYXVsdF9pbWFnZS5DMyJ9&_nc_ohc=7_5XlzicN2wQ7kNvwH1yigb&_nc_oc=Adk5mTtoWEtK_5ru4qc_U9SUi24yu6OSqRqe6LiDyjyrp7gpbJYGhzkEKTtJo7No9A0&_nc_zt=23&_nc_ht=scontent.cdninstagram.com&_nc_gid=yQ0bhCgDYoWWV0NJFeLDSQ&oh=00_AfjG8sjB7jb_SjjCyffHkqhwquyKJiacvswZAVdwo_F4Qg&oe=69313935"></div>
+            <div class="gallery-item"><img src="https://scontent.cdninstagram.com/v/t51.29350-15/435291514_1339378000068964_4602357835096393093_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=106&ig_cache_key=MzMzODMxNjU5NjE3NDkxMjYwMQ%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTgwMC5zZHIuZGVmYXVsdF9pbWFnZS5DMyJ9&_nc_ohc=eW3j5fptCNAQ7kNvwElSxGo&_nc_oc=Adnk6qQKEb3DgizT5JaZc7e74BtYn8f4_L25H_q8DQgOgHCo1z3rsa6M9HuxConDe5E&_nc_zt=23&_nc_ht=scontent.cdninstagram.com&_nc_gid=lQJIgE1AIIizGNmf27w3SQ&oh=00_AfgbX64u7R26jA2YXSZeKF17jRIW5NRAa19s2bkFjpN1rA&oe=693126CC"></div>
+            <div class="gallery-item"><img src="https://scontent.cdninstagram.com/v/t51.75761-15/474986377_18479704585054126_4908245254158342239_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=111&ig_cache_key=MzU1OTkzMjc4NTY3MjgxNjcyMg%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTA4Mi5zZHIuQzMifQ%3D%3D&_nc_ohc=bkGGE6iSrKgQ7kNvwEtRmdx&_nc_oc=Adn5zBcz1w7dLVoTJjgIyCZNnwdYHCiJIVsQLuUG9jQPT756FVNU4NYM8stQrp4t_nc&_nc_zt=23&_nc_ht=scontent.cdninstagram.com&_nc_gid=pBkKhbH9UXsx0W0bCIW0uQ&oh=00_AfiOzjVjGPA5TujNmgn6jAuJEQsThhYj4yq98xNwflUDcg&oe=69314075"></div>
+            <div class="gallery-item"><img src="https://scontent.cdninstagram.com/v/t51.75761-15/487469288_18490088137054126_7603686794289392639_n.jpg?stp=dst-jpg_e15_tt6&_nc_cat=110&ig_cache_key=MzU5ODgwODE0MjU3MjEyNDQ1Nw%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjcyMHg5MDAuc2RyLkMzIn0%3D&_nc_ohc=fuu5zGtDZs0Q7kNvwFrI_o4&_nc_oc=AdnHnjfaLbKAGryOHrJssfYFy-C4K5xUUw-wJZP3lPMuPGw5WbjJzOTrzX5SWwsKpas&_nc_zt=23&_nc_ht=scontent.cdninstagram.com&_nc_gid=maZganjQbgXM0Hv8lFF-XA&oh=00_AfiMkh10aBHCI5I0n9mA3mltAhkWjyhMcLmnuT1gOovg3Q&oe=69313806"></div>
+        </div>
     </div>
 
 </body>
