Refactor index.html for portfolio layout and links
Updated the portfolio HTML structure and styles, including links and media.

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <div class="label">© 2025</div>
         </div>
 
-        <a href="https://v.douyin.com/iR31M35J/" target="_blank" class="card showreel">
+        <a href="https://www.douyin.com/video/7554673535001103656" target="_blank" class="card showreel">
             <video autoplay loop muted playsinline class="video-bg">
                 <source src="https://sns-video-hs.xhscdn.com/stream/79/110/259/01e8d789ea1729ca01037003998a12bb70_259.mp4" type="video/mp4">
             </video>              
@@ -240,5 +240,6 @@
 
 </body>
 </html>
+
 
 
