Revamp portfolio layout and styles
Updated the portfolio layout and styles, including responsive design adjustments and added new images for the gallery section.

--- a/index.html
+++ b/index.html
@@ -349,18 +349,18 @@
 
     </div>
 
-    <div class="gallery-section swiper-container">
-        <div class="gallery-track swiper-wrapper">
-            <div class="gallery-item swiper-slide"><img src="https://scontent.cdninstagram.com/v/t51.82787-15/586678011_18537401626054126_1806756505533089462_n.jpg"></div>
-            <div class="gallery-item swiper-slide"><img src="https://scontent.cdninstagram.com/v/t51.29350-15/468809878_1124327509073560_8557229509737193427_n.jpg"></div>
-            <div class="gallery-item swiper-slide"><img src="https://scontent.cdninstagram.com/v/t51.29350-15/456720200_858546882524369_9026759935935559384_n.jpg"></div>
-            <div class="gallery-item swiper-slide"><img src="https://scontent.cdninstagram.com/v/t51.29350-15/416560155_1566547424081636_2590372858106644115_n.jpg"></div>
-            <div class="gallery-item swiper-slide"><img src="https://scontent.cdninstagram.com/v/t51.29350-15/426069052_393098243298091_6186439351646472103_n.jpg"></div>
-            <div class="gallery-item swiper-slide"><img src="https://scontent.cdninstagram.com/v/t51.29350-15/435291514_1339378000068964_4602357835096393093_n.jpg"></div>
-            <div class="gallery-item swiper-slide"><img src="https://scontent.cdninstagram.com/v/t51.75761-15/474986377_18479704585054126_4908245254158342239_n.jpg"></div>
-            <div class="gallery-item swiper-slide"><img src="https://scontent.cdninstagram.com/v/t51.75761-15/487469288_18490088137054126_7603686794289392639_n.jpg"></div>
-        </div>
+<div class="gallery-section swiper-container">
+    <div class="gallery-track swiper-wrapper">
+        <div class="gallery-item swiper-slide"><img src="https://yuman-pf-images.oss-cn-guangzhou.aliyuncs.com/images/images/image1.JPG"></div>
+        <div class="gallery-item swiper-slide"><img src="https://yuman-pf-images.oss-cn-guangzhou.aliyuncs.com/images/images/image2.jpg"></div>
+        <div class="gallery-item swiper-slide"><img src="https://yuman-pf-images.oss-cn-guangzhou.aliyuncs.com/images/images/image3.JPG"></div>
+        <div class="gallery-item swiper-slide"><img src="https://yuman-pf-images.oss-cn-guangzhou.aliyuncs.com/images/images/image4.JPG"></div>
+        <div class="gallery-item swiper-slide"><img src="https://yuman-pf-images.oss-cn-guangzhou.aliyuncs.com/images/images/image5.JPG"></div>
+        <div class="gallery-item swiper-slide"><img src="https://yuman-pf-images.oss-cn-guangzhou.aliyuncs.com/images/images/image6.JPG"></div>
+        <div class="gallery-item swiper-slide"><img src="https://yuman-pf-images.oss-cn-guangzhou.aliyuncs.com/images/images/image7.JPG"></div>
+        <div class="gallery-item swiper-slide"><img src="https://yuman-pf-images.oss-cn-guangzhou.aliyuncs.com/images/images/image8.JPG"></div>
     </div>
+</div>
 
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script>
@@ -387,3 +387,4 @@
 </body>
 
 </html>
+
