Restore original index.html content
Restored the original content of index.html after accidental removal.

--- a/index.html
+++ b/index.html
@@ -304,9 +304,9 @@
             <div class="label">© 2025</div>
         </div>
 
-        <a href="https://www.douyin.com/video/7554673535001103656" target="_blank" class="card showreel">
+     <a href="https://www.douyin.com/video/7554673535001103656" target="_blank" class="card showreel">
             <video autoplay loop muted playsinline class="video-bg">
-                <source src="https://sns-video-hs.xhscdn.com/stream/79/110/259/01e8d789ea1729ca01037003998a12bb70_259.mp4" type="video/mp4">
+                <source src="https://yuman-pf-images.oss-cn-guangzhou.aliyuncs.com/video/video1.mp4" type="video/mp4">
             </video>
             <div class="play-btn">
                 <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
@@ -387,4 +387,5 @@
 </body>
 
 </html>
+
 
